Refactor dao and services using Stream API