@@ -13,7 +13,6 @@ import java.util.ArrayList;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class ClientServiceImpl implements ClientService {
 
@@ -76,12 +75,11 @@ public class ClientServiceImpl implements ClientService {
 
     public Client checkInAnyFreeApartment(long clientId, int stayDuration) {
         Client client = getById(clientId);
-        List<Apartment> apartments = apartmentService.getAll();
         if (ClientStatus.CHECKED_IN == client.getStatus()) {
             throw new RuntimeException("This client is already checked in. Apartment id: "
                     + client.getApartment().getId());
         }
-        Optional<Apartment> availableApartment = apartments.stream()
+        Optional<Apartment> availableApartment = apartmentService.getAll().stream()
                 .filter(apartment -> apartment.getCapacity() >= client.getQuantityOfPeople())
                 .filter(apartment -> ApartmentStatus.AVAILABLE == apartment.getStatus())
                 .findFirst();
@@ -155,22 +153,21 @@ public class ClientServiceImpl implements ClientService {
     }
 
     private List<Client> sortByName() {
-        List<Client> sortedByName = new ArrayList<>(getAll());
-        sortedByName.sort(Comparator.comparing(Client::getName));
-        return sortedByName;
+        return getAll().stream()
+                .sorted(Comparator.comparing(Client::getName))
+                .toList();
     }
 
     private List<Client> sortByCheckOutDate() {
-        List<Client> sortedByCheckOutDate = new ArrayList<>(getAll());
-        return sortedByCheckOutDate.stream()
+        return getAll().stream()
                 .filter(client -> client.getStatus() != ClientStatus.NEW)
                 .sorted(Comparator.comparing(Client::getCheckOutDate))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Client> sortByStatus() {
-        List<Client> sortedByStatus = new ArrayList<>(getAll());
-        sortedByStatus.sort(Comparator.comparing(Client::getStatus));
-        return sortedByStatus;
+        return getAll().stream()
+                .sorted(Comparator.comparing(Client::getStatus))
+                .toList();
     }
 }
